Prevent border-radius bleeding for SitesDropdown

--- a/client/components/sites-dropdown/style.scss
+++ b/client/components/sites-dropdown/style.scss
@@ -57,6 +57,7 @@
 	position: static;
 	max-height: 30vh;
 	overflow-y: auto;
+	border-radius: 0 0 2px 2px;
 
 	&.is-large {
 		margin-top: 50px;
